Refactor Get Post by ID and Get all Post by id to include Comments section also.