@@ -1,10 +1,10 @@
 package com.springboot.blog.service;
 
+import com.springboot.blog.entity.Comment;
 import com.springboot.blog.entity.Post;
 import com.springboot.blog.exception.ResourceNotFoundException;
-import com.springboot.blog.payload.PostPaginationResponse;
-import com.springboot.blog.payload.PostRequestDto;
-import com.springboot.blog.payload.PostResponseDto;
+import com.springboot.blog.payload.*;
+import com.springboot.blog.repository.CommentRepository;
 import com.springboot.blog.repository.PostRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
@@ -14,17 +14,21 @@ import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.Set;
+import java.util.stream.Collectors;
 
 @Service
 public class PostService {
 
     private final PostRepository postRepository;
+    private final CommentRepository commentRepository;
 
     // we can omit @Autowired because it has only 1 param. From spring 4.3 onwards, if a class is configured as a spring bean and it has only one constructor,
     // then we can omit the @Autowired annotation
     @Autowired
-    public PostService(PostRepository postRepository) {
+    public PostService(PostRepository postRepository, CommentRepository commentRepository) {
         this.postRepository = postRepository;
+        this.commentRepository = commentRepository;
     }
 
     public PostResponseDto createPost(PostRequestDto requestPost) {
@@ -41,7 +45,11 @@ public class PostService {
         Page<Post> posts = postRepository.findAll(pageable);
         List<Post> postList = posts.getContent();
 
-        List<PostResponseDto> content = postList.stream().map(Post::toPostDto).toList();
+        List<PostWithCommentsDto> content = postList.stream().map(post -> {
+            List<Comment> comments = commentRepository.findByPostId(post.getId());
+            Set<CommentResponseDto> commentResponseDtos = comments.stream().map(comment -> comment.toCommentDto()).collect(Collectors.toSet());
+            return post.toPostCommentDto(commentResponseDtos);
+        }).collect(Collectors.toList());
 
         PostPaginationResponse paginationResponse = new PostPaginationResponse();
         paginationResponse.setContent(content);
@@ -54,8 +62,12 @@ public class PostService {
         return paginationResponse;
     }
 
-    public PostResponseDto getPostById(long id) {
-        return postRepository.findById(id).orElseThrow(() -> new ResourceNotFoundException("Post", "id", String.valueOf(id))).toPostDto();
+    public PostWithCommentsDto getPostById(long id) {
+        Post post = postRepository.findById(id).orElseThrow(() -> new ResourceNotFoundException("Post", "id", String.valueOf(id)));
+        List<Comment> comments = commentRepository.findByPostId(post.getId());
+        Set<CommentResponseDto> commentResponseDtos = comments.stream().map(comment -> comment.toCommentDto()).collect(Collectors.toSet());
+
+        return post.toPostCommentDto(commentResponseDtos);
     }
 
     public PostResponseDto updatePost(PostRequestDto requestPost, long id) {
